ECA-1269: cache common database queries that are not needed to look up every time.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@7579 37aeb1de-b14b-0410-9a0e-82b28170d228